Added delete and update methods. Added repository implementation and changed project organization.
