# src/main/java/com/bernalvarela/customerservice/domain/model/Customer.java
@@ -1,0 +1,18 @@
+package com.bernalvarela.customerservice.domain.model;
+
+import lombok.*;
+
+@Value
+@ToString
+@Builder
+public class Customer {
+
+    long id;
+
+    String name;
+
+    String surname;
+
+    String photo;
+
+}
