# src/main/resources/api.yml
@@ -5,7 +5,7 @@ info:
     Customers API Spec
   version: 1.0.0
 servers:
-  - url: api/v1
+  - url: http://localhost:8080/api/v1
 paths:
   /customers:
     post:
@@ -45,6 +45,60 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Customer'
+        '400':
+          description: Bad request
+  /customers/{id}':
+    parameters:
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+          format: int64
+    get:
+      summary: Get customer by id
+      description: Get a customer by id
+      operationId: getCustomer
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Customer'
+        '404':
+          description: id not found
+    delete:
+      summary: Delete customers by id
+      description: Delete a customer by id
+      operationId: deleteCustomer
+      responses:
+        '204':
+          description: Deleted
+        '404':
+          description: id not found
+        '401':
+          description: Unauthorized
+    patch:
+      tags:
+        - customer
+      summary: Update a customer
+      description: Aupdate a customer
+      operationId: updateCustomer
+      requestBody:
+        description: Update a customer
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Customer'
+        required: true
+      responses:
+        '200':
+          description: Updated
+          content:
+            application/json:
+              schema:
+                type: string
         '400':
           description: Bad request
 components:
